// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatApplication /> allows to enable chat widget and selects the first chat by default 1`] = `
<div>
  <section>
    <div
      class="heading"
    >
      <div>
        <h3>
          Chat Widget
        </h3>
        <p>
          This chat integration is going to be displayed as a widget on every page of your help center.
        </p>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class=""
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle"
            >
              <span
                class="label"
                style="min-width: 10px; opacity: 1;"
              >
                <span>
                  <img
                    alt="en-US"
                    class="flag-emoji"
                    src="test-file-stub"
                  />
                  <span>
                    English - USA
                  </span>
                </span>
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                style="min-width: 10px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              No result
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-flex mt-4"
    >
      <label
        class="switch toggle-switch"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <div
          class="slider"
        />
      </label>
      <label
        class="control-label ml-2"
      >
        Enable chat widget
      </label>
    </div>
    <p>
      This makes a chat widget visible for all help center pages.
    </p>
  </section>
</div>
`;

exports[`<ChatApplication /> is disabled if there are no chat integrations 1`] = `
<div>
  <section>
    <div
      class="heading"
    >
      <div>
        <h3>
          Chat Widget
        </h3>
        <p>
          This chat integration is going to be displayed as a widget on every page of your help center.
        </p>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class=""
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle"
            >
              <span
                class="label"
                style="min-width: 10px; opacity: 1;"
              >
                <span>
                  <img
                    alt="en-US"
                    class="flag-emoji"
                    src="test-file-stub"
                  />
                  <span>
                    English - USA
                  </span>
                </span>
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                style="min-width: 10px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              No result
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-flex mt-4"
    >
      <label
        class="switch toggle-switch disabled"
      >
        <input
          disabled=""
          readonly=""
          type="checkbox"
        />
        <div
          class="slider"
        />
      </label>
      <label
        class="control-label ml-2"
      >
        Enable chat widget
      </label>
    </div>
    <p>
      This makes a chat widget visible for all help center pages.
    </p>
    <div
      class="warning-no-chat"
    >
      <span
        class="float-right"
      >
        <a
          to="/app/settings/integrations/gorgias_chat"
        >
          Create Chat
        </a>
      </span>
      <span
        class="warning-icon mr-2"
      >
        <i
          class="material-icons"
        >
          report_problem
        </i>
      </span>
      You don't have any existing chat integration. Please create one to enable.
    </div>
  </section>
</div>
`;
